# magnesie-result-storage

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml
webservice/: Cargo.toml  Dockerfile  diesel.toml
webservice/docs/: settings.html  source-files.js
webservice/docs/implementors/core/default/: trait.Default.js
webservice/docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
webservice/docs/implementors/diesel/associations/: trait.Identifiable.js
webservice/docs/implementors/diesel/deserialize/: trait.Queryable.js
webservice/docs/implementors/diesel/expression/: trait.NonAggregate.js
webservice/docs/implementors/diesel/insertable/: trait.Insertable.js
webservice/docs/implementors/diesel/query_builder/: trait.AsQuery.js  trait.QueryFragment.js
webservice/docs/implementors/diesel/query_source/: trait.Column.js  trait.QuerySource.js
webservice/docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
webservice/docs/src/webservice/: cors.rs.html  models.rs.html
webservice/docs/webservice/: fn.main.html  sidebar-items.js  struct.DbConnPool.html
webservice/docs/webservice/models/: index.html  sidebar-items.js
webservice/docs/webservice/routes/: fn.rocket_route_fn_add_result.html  sidebar-items.js  static.static_rocket_route_info_for_home.html
webservice/docs/webservice/schema/: index.html  sidebar-items.js
webservice/docs/webservice/schema/results/: index.html  (+3 more)
webservice/src/: beans.rs  cors.rs  main.rs  models.rs  routes.rs  schema.rs
webservice/test/: JDD.sql
(+60 files in other folders)
