[package]
name = "webservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"]}
reqwest = { version = "0.11.1", features = ["blocking", "cookies"] }
openssl = { version = "0.10", features = ["vendored"] }
diesel_geometry = "1.4.0"
# For connecting with the MySQL database
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
# Rocket Webserver
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["serve", "json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"


[profile.dev]
debug = 2